fix navbar admin but not responsive

--- a/smail/src/main/resources/static/css/navbarUser.css
+++ b/smail/src/main/resources/static/css/navbarUser.css
@@ -1,36 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap");
 
 *{
-    margin: 0;
-    padding: 0;
-    font-family: 'Rubik';
+  margin: 0;
+  padding: 0;
+  font-family: Rubik;
 }
 
-body {
-    margin: 0;
-}
+/* body {
+  margin-right: 10;
+  margin-left: 10;
 
-nav{
-  width: 100%;
+  margin: 0;
+} */
+
+nav {
+  position: sticky;
+  top: 10px;
+  width: calc(100% - 20px);
   height: 70px;
   background: #b1cdb8;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  z-index: 99;
+  border-radius: 12px;
+  margin: 10px 10px;
 }
 
 nav .navbar{
   height: 100%;
-  max-width: 1250px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: auto;
   padding: 0 50px;
 }
 
 .navbar .logo img{
-    height: 50%;
-    width: 50%;
+  height: 50%;
+  width: 50%;
 }
 
 nav .navbar .nav-links{
@@ -221,12 +223,14 @@ nav .navbar .links li .sub-menu a {
     display: block !important;
 }
 
-
-
-@media (max-width:920px) {
+/* @media (max-width: 1100px) {
   nav .navbar{
     max-width: 100%;
     padding: 0 25px;
+  }
+
+  .navbar .bx-menu{
+    display: block;
   }
 
   nav .navbar .logo a{
@@ -239,11 +243,9 @@ nav .navbar .links li .sub-menu a {
   nav .navbar .links li a{
     font-size: 15px;
   }
-}
-@media (max-width:800px){
-  nav{
-    /* position: relative; */
-  }
+} */
+
+@media (max-width:1100px){
   .navbar .bx-menu{
     display: block;
   }
